--- a/src/app/AddOns/Navigation.scss
+++ b/src/app/AddOns/Navigation.scss
@@ -20,6 +20,7 @@
 		transition: all .3s ease;
 		user-select: none;
 		cursor: pointer;
+		z-index: 99;
 	}
 
 	&.menuOpen {
